--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,3 +37,14 @@ body {
 	h5{font-size: 15px;}
 	p{font-size: 12px;}
 }
+
+.caption {
+	h3 {
+		font-size: 17px;
+		margin: 2px;
+	}
+	p {
+		font-size: 10px;
+		margin: 0px;
+	}
+}
